[package]
authors = ["Mahesh Sundaram"]
name = "aes-gcm-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
aes-gcm = "0.10.3"
generic-array = "0.14"
getrandom = { version = "0.2.10", features = ["js"] }
typenum = "1.17.0"
wasm-bindgen = "0.2.88"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
